--- a/amuin-valdez/index.html
+++ b/amuin-valdez/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Kids Playground</title>
+    <title>Kiddie Playground</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
